@@ -43,7 +43,6 @@ public interface RefreshUserMappingsProtocol extends VersionedProtocol {
 
   /**
    * Refresh user to group mappings.
-   * @param conf
    * @throws IOException
    */
   public void refreshUserToGroupsMappings() throws IOException;
